# ascm-ws2526-gruppe-1

./: LICENSE  README.md  main.py  pyproject.toml
ASCM-ws2526-Gruppe_1/01-Produktion/: Bierproduktion.ipynb
ASCM-ws2526-Gruppe_1/01-Produktion-Gruppe_1/: Bierproduktion_Gruppe_1.ipynb
ASCM-ws2526-Gruppe_1/02-Transportproblem/: Transportproblem.ipynb
ASCM-ws2526-Gruppe_1/03-Bedarfsprognose/: 2013-2024_sales_data.csv  Bedarfsprognose_Aufgabe.ipynb  Bedarfsprognose_Beispiele.ipynb  output_Observations.csv
ASCM-ws2526-Gruppe_1/03-Bedarfsprognose-Gruppe_1/: Bedarfsprognose_Aufgabe_Gruppe_1.ipynb  Bedarfsprognose_Theorie.ipynb
Einfuehrung/: Bierproduktion-Einfuehrung.ipynb  Transportproblem-Einfuehrung.ipynb
