[project]
name = "ascm-ws2526-gruppe-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pipreqs>=0.5.0",
    "pmdarima>=2.1.1",
    "pulp>=3.3.0",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
]
